fix: dockerized application